--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 :root {
-    --color-primary: #4B69FD;
-    --color-secondary: #FFF9EB;
-    --color-tertiary: #C4C4C4;
-    --color-button: #fe652b;
-    --color-button-hover: #e55720;
-    --color-text: #444444;
+    --color-button: #00b4ba;
+    --color-button-hover: #009ba1;
+    --color-button-disabled: #C4C4C4;
+    --color-text: #333334;
     --color-white: #FFFFFF;
 }
 
@@ -16,7 +14,7 @@
 }
 
 .main-content {
-    background-color: var(--color-primary);
+    background: linear-gradient(to bottom, #15f7ff, #ffffff,#fffa5c );
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -39,8 +37,6 @@
 /* Sección de entrada */
 .input-section {
     flex: 60%;
-    background-color: var(--color-secondary);
-    border-radius: 64px 64px 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,14 +50,14 @@
     font-family: "Merriweather", serif;
     font-weight: 900;
     font-style: italic;
-    color: var(--color-white);
+    color: #0d00bf;
 }
 
 .section-title {
-    font-family: "Inter", serif;
-    font-size: 36px;
+    font-family: "Merriweather", serif;
+    font-size: 28px;
     font-weight: 700;
-    color: var(--color-primary);
+    color: var(--color-text);
     margin: 10px 0;
     text-align: center;
 }
@@ -78,7 +74,7 @@
 .input-name {
     width: 100%;
     padding: 10px;
-    border: 2px solid #000;
+    border: 2px solid #333;
     border-radius: 25px 0 0 25px;
     font-size: 16px;
 }
@@ -87,31 +83,20 @@
     display: flex;
     justify-content: center; 
     gap: 20px; 
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .button-container {
     width: 300px;
+    display: flex;
     justify-content: center;
-}
-
-/* Estilos de entrada de texto */
-.input-title {
-    flex: 1;
-    padding: 10px 15px;
-    font-size: 16px;
-    border: 2px solid #333;
-    border-right: none;
-    border-radius: 25px 0 0 25px;
-    font-family: "Merriweather", serif;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 /* Estilos de botón */
 button {
     padding: 15px 30px;
     font-family: "Inter", sans-serif;
-    font-size: 16px;
+    font-size: 1em;
     border: 2px solid #000;
     border-radius: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -119,13 +104,14 @@ button {
 }
 
 .button-add {
-    background-color: var(--color-tertiary);
-    color: var(--color-text);
+    background-color: var(--color-button);
+    color: var(--color-white);
+    font-weight: 700;
     border-radius: 0 25px 25px 0;
 }
 
 .button-add:hover {
-    background-color: #a1a1a1;
+    background-color: var(--color-button-hover);
 }
 
 /* Listas */
@@ -134,16 +120,45 @@ ul {
     color: var(--color-text);
     font-family: "Inter", sans-serif;
     font-size: 18px;
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
-.result-list {
-    margin-top: 15px;
-    color: #05DF05;
-    font-size: 22px;
+.resaltado {
+    border: 3px solid var(--color-button-hover);
     font-weight: bold;
-    text-align: center;
+    transition: background-color 0.3s;
 }
+
+.amigo-secreto {
+    background-color: rgb(0, 189, 189);
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.name-list {
+    width: 50%;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.name-list .name-item {
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 10px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 300px;
+}
+
 
 /* Botón de sortear título */
 .button-draw {
@@ -152,8 +167,9 @@ ul {
     width: 100%;
     padding: 10px 40px;
     color: var(--color-white);
+    font-weight: 700;
     background-color: var(--color-button);
-    font-size: 16px;
+    font-size: 1em;
     margin-bottom: 20px;
 }
 
@@ -173,7 +189,7 @@ ul {
 }
 
 .button-draw:disabled {
-    background-color: var(--color-tertiary); 
+    background-color: var(--color-button-disabled); 
     cursor: not-allowed; 
 }
 
@@ -219,6 +235,9 @@ ul {
         font-size: 20px;
     }
 
+    ul {
+        font-size: 1em;
+    }
     input, select, button {
         font-size: 14px;
         padding: 8px;
@@ -232,6 +251,7 @@ ul {
         flex-direction: column;
         align-items: center;
     }
+}
 
 @media (max-width: 480px) {
     .header-banner {
@@ -258,5 +278,13 @@ ul {
     button {
         font-size: 16px;
     }
-}
+
+    .button-draw {
+        width: 80%;
+        margin-bottom: 10px;
+    }
+
+    .button-draw img{
+        margin-right: 10px;
+    }
 }
